<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:hint="Masukkan berat (kg)"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:hint="Masukkan tinggi (cm)"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hitung BMI"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil akan ditampilkan di sini"
        android:paddingTop="16dp"/>

</LinearLayout>
